--- a/src/scss/common/mixins.scss
+++ b/src/scss/common/mixins.scss
@@ -10,3 +10,10 @@
     align-items: center;
     flex-direction: column;
 }
+
+@mixin flex-end-column {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+}
