--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,147 @@
-.container {
-  font-size: 16px;
+body {
+  margin: 0px;
+  color: black;
+}
+
+header {
+  width: 100%;
+  height: 60px;
+}
+
+.bg-orange-300 {
+  background-color: #FF8A65;
+}
+
+.bg-orange-600 {
+  background-color: #F4511E;
+}
+
+.bg-orange-900 {
+  background-color: #BF360C;
+}
+
+.orange-300 {
+  color: #FF8A65;
+}
+
+.orange-600 {
+  color: #F4511E;
+}
+
+.orange-900 {
+  color: #BF360C;
+}
+
+.bg-grey-1 {
+  background-color: #F6F6F8;
+}
+
+.bg-grey-2 {
+  background-color: #E3E3E3;
+}
+
+.box-shadow {
+  -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+          box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+}
+
+.vh-100 {
+  height: 100vh;
+}
+
+.vw-100 {
+  width: 100vw;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.background-image {
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.flex-center-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.flex-end-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.flex-center-center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+a.hero-button-link {
+  max-width: 100%;
+  padding: 20px 35px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  border-color: black;
+}
+
+.carbon-block-section {
+  width: 100%;
+}
+
+.carbon-block-hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 20px;
+  height: calc(100vh - 60px);
+  width: 100%;
+  padding-bottom: 150px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
