added fonts and typography styling

--- a/assets/scss/elements/buttons.scss
+++ b/assets/scss/elements/buttons.scss
@@ -1,6 +1,8 @@
 a.hero-button-link {
     max-width: 100%;
     padding: 20px 35px;
+    font-family: 'spartan_medium';
+    letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
