--- a/admin/css/carbon-blocks.css
+++ b/admin/css/carbon-blocks.css
@@ -61,3 +61,18 @@
     width: 300px;
     max-width: 100%;
 }
+
+.text-center {
+    text-align: center;
+}
+
+a.hero-button-link {
+    max-width: 100%;
+    padding: 20px 35px;
+    font-family: 'spartan_medium';
+    letter-spacing: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    border-color: black;
+}
