--- a/assets/scss/common/main.scss
+++ b/assets/scss/common/main.scss
@@ -1,9 +1,16 @@
 body {
+    width: 100%;
     margin: 0px;
     color: black;
+    font-family: 'libre_regular';
+    font-size: 16px;
+    line-height: 27px;
 }
 
 header {
     width: 100%;
     height: 60px;
+    box-sizing: border-box;
 }
+
+main { width: 100%;}
