--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,21 @@
 body {
+  width: 100%;
   margin: 0px;
   color: black;
+  font-family: "libre_regular";
+  font-size: 16px;
+  line-height: 27px;
 }
 
 header {
   width: 100%;
   height: 60px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+main {
+  width: 100%;
 }
 
 .bg-orange-300 {
@@ -116,6 +126,10 @@ p {
   margin-bottom: 30px;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .background-image {
   background-repeat: no-repeat;
   background-position: center;
@@ -187,9 +201,37 @@ a.hero-button-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  grid-gap: 20px;
+  width: 100%;
+  padding-bottom: 150px;
+  padding-left: 20px;
+  padding-right: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.carbon-block-guide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -197,11 +239,68 @@ a.hero-button-link {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: calc(100vh - 60px);
   width: 100%;
-  padding-bottom: 150px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
+  grid-gap: 50px;
+}
+
+.carbon-block-guide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  grid-gap: 60px;
+  width: 100%;
+  padding: 30px 20px 80px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.carbon-block-guide-instructions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  grid-gap: 50px;
+  width: 100%;
+}
+
+.carbon-block-guide-inst {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 20px;
+  width: 300px;
+  max-width: 100%;
 }
