--- a/assets/scss/elements/carbon-blocks.scss
+++ b/assets/scss/elements/carbon-blocks.scss
@@ -18,15 +18,6 @@
     background-position: center;
 }
 
-.carbon-block-guide {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    grid-gap: 50px;
-}
 
 .carbon-block-guide {
     display: flex;
@@ -37,7 +28,7 @@
     width: 100%;
     grid-gap: 60px;
     width: 100%;
-    padding: 30px 20px 80px 20px;
+    padding: 30px 20px 50px 20px;
     box-sizing: border-box;
 }
 
@@ -47,7 +38,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    grid-gap: 50px;
+    grid-gap: 70px;
     width: 100%;
 }
 
@@ -60,4 +51,8 @@
     grid-gap: 20px;
     width: 300px;
     max-width: 100%;
+    padding: 60px 40px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
