--- a/static/style.css
+++ b/static/style.css
@@ -240,29 +240,9 @@ a.hero-button-link {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  grid-gap: 50px;
-}
-
-.carbon-block-guide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
   grid-gap: 60px;
   width: 100%;
-  padding: 30px 20px 80px 20px;
+  padding: 30px 20px 50px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -280,7 +260,7 @@ a.hero-button-link {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  grid-gap: 50px;
+  grid-gap: 70px;
   width: 100%;
 }
 
@@ -303,4 +283,10 @@ a.hero-button-link {
   grid-gap: 20px;
   width: 300px;
   max-width: 100%;
+  padding: 60px 40px;
+  -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+          box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5px;
 }
