added single-product and part-gallery-preview

--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -9,3 +9,4 @@
 @import 'assets/scss/elements/containers';
 @import 'assets/scss/elements/buttons';
 @import 'assets/scss/elements/carbon-blocks';
+@import 'assets/scss/elements/product-previews';
