--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -289,3 +289,19 @@ a.hero-button-link {
 .carbon-block-guide-inst h4 {
   margin-top: 0px;
 }
+
+.photolab-gallery-preview {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
