--- a/assets/scss/admin-style.scss
+++ b/assets/scss/admin-style.scss
@@ -1,4 +1,5 @@
 @import 'assets/scss/common/mixins';
+@import 'assets/scss/common/colours';
 
 @import 'assets/scss/elements/containers';
 @import 'assets/scss/elements/buttons';
