--- a/assets/scss/elements/carbon-blocks.scss
+++ b/assets/scss/elements/carbon-blocks.scss
@@ -50,3 +50,34 @@
         margin-top: 0px;
     }
 }
+
+.carbon-block-previews {
+    @include flex-center-column;
+    width: 100%;
+    grid-gap: 70px;
+    padding: 30px 20px 50px 20px;
+    box-sizing: border-box;
+
+    p {
+        margin-bottom: 0px;
+    }
+
+    .category-selector {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        max-width: 1200px;
+    }
+
+    .products {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        width: 100%;
+        grid-gap: 90px;
+
+    }
+
+}
