--- a/assets/scss/elements/product-previews.scss
+++ b/assets/scss/elements/product-previews.scss
@@ -1,3 +1,22 @@
-.photolab-gallery-preview {
+.photolab-product-preview {
     @include flex-center-column;
+    width: 390px;
+    max-width: 100%;
+    grid-gap: 20px;
+
+    .image-container {
+        @include flex-center-center;
+        width: 100%;
+        height: 275px;
+        overflow-y: hidden;
+    }
+
+    h5, p {
+        margin-top: 0;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
