--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -42,6 +42,10 @@ main {
   color: #BF360C;
 }
 
+.red {
+  color: red;
+}
+
 .bg-grey-1 {
   background-color: #F6F6F8;
 }
@@ -130,6 +134,10 @@ p {
   text-align: center;
 }
 
+.line-through {
+  text-decoration: line-through;
+}
+
 .background-image {
   background-repeat: no-repeat;
   background-position: center;
@@ -182,6 +190,31 @@ p {
           align-items: center;
 }
 
+.flex-start-center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.c-gap-10 {
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+}
+
+.c-gap-20 {
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
+}
+
 a.hero-button-link,
 a.more-info-button,
 a.select-product-button {
@@ -194,6 +227,8 @@ a.select-product-button {
   text-transform: uppercase;
   color: black;
   border-color: black;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a.hero-button-link {
@@ -202,15 +237,15 @@ a.hero-button-link {
 }
 
 a.more-info-button {
-  padding: 15px 35px;
-  width: 125px;
+  width: 100%;
+  padding: 10px 35px;
   color: white;
   background-color: #F4511E;
 }
 
 a.select-product-button {
-  padding: 15px 35px;
-  width: 125px;
+  width: 100%;
+  padding: 10px 35px;
   color: white;
   background-color: #BF360C;
 }
@@ -262,7 +297,7 @@ a.select-product-button {
   width: 100%;
   grid-gap: 70px;
   width: 100%;
-  padding: 30px 20px 50px 20px;
+  padding: 30px 20px 100px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -328,7 +363,7 @@ a.select-product-button {
           flex-direction: column;
   width: 100%;
   grid-gap: 70px;
-  padding: 30px 20px 50px 20px;
+  padding: 30px 20px 100px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -361,7 +396,7 @@ a.select-product-button {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  grid-gap: 90px;
+  grid-gap: 100px;
 }
 
 .photolab-product-preview {
@@ -381,6 +416,8 @@ a.select-product-button {
   width: 390px;
   max-width: 100%;
   grid-gap: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .photolab-product-preview .image-container {
   display: -webkit-box;
@@ -392,9 +429,43 @@ a.select-product-button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
   width: 100%;
   height: 275px;
   overflow-y: hidden;
+}
+.photolab-product-preview .info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+.photolab-product-preview .button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-gap: 5px;
+  width: 100%;
 }
 .photolab-product-preview h5, .photolab-product-preview p {
   margin-top: 0;
