--- a/assets/scss/common/mixins.scss
+++ b/assets/scss/common/mixins.scss
@@ -4,6 +4,19 @@
     align-items: center;
 }
 
+@mixin flex-start-center {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+@mixin flex-start-column {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
 @mixin flex-center-column {
     display: flex;
     justify-content: center;
