--- a/assets/scss/elements/product-previews.scss
+++ b/assets/scss/elements/product-previews.scss
@@ -3,12 +3,25 @@
     width: 390px;
     max-width: 100%;
     grid-gap: 20px;
+    box-sizing: border-box;
 
     .image-container {
         @include flex-center-center;
+        position: relative;
         width: 100%;
         height: 275px;
         overflow-y: hidden;
+    }
+
+    .info-container {
+        @include flex-start-column;
+        width: 100%;
+    }
+
+    .button-container {
+        @include flex-center-column;
+        grid-gap: 5px;
+        width: 100%;
     }
 
     h5, p {
