--- a/static/admin-style.css
+++ b/static/admin-style.css
@@ -22,6 +22,10 @@
   color: #BF360C;
 }
 
+.red {
+  color: red;
+}
+
 .bg-grey-1 {
   background-color: #F6F6F8;
 }
@@ -77,6 +81,31 @@
           align-items: center;
 }
 
+.flex-start-center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.c-gap-10 {
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+}
+
+.c-gap-20 {
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
+}
+
 a.hero-button-link,
 a.more-info-button,
 a.select-product-button {
@@ -89,6 +118,8 @@ a.select-product-button {
   text-transform: uppercase;
   color: black;
   border-color: black;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a.hero-button-link {
@@ -97,15 +128,15 @@ a.hero-button-link {
 }
 
 a.more-info-button {
-  padding: 15px 35px;
-  width: 125px;
+  width: 100%;
+  padding: 10px 35px;
   color: white;
   background-color: #F4511E;
 }
 
 a.select-product-button {
-  padding: 15px 35px;
-  width: 125px;
+  width: 100%;
+  padding: 10px 35px;
   color: white;
   background-color: #BF360C;
 }
@@ -157,7 +188,7 @@ a.select-product-button {
   width: 100%;
   grid-gap: 70px;
   width: 100%;
-  padding: 30px 20px 50px 20px;
+  padding: 30px 20px 100px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -223,7 +254,7 @@ a.select-product-button {
           flex-direction: column;
   width: 100%;
   grid-gap: 70px;
-  padding: 30px 20px 50px 20px;
+  padding: 30px 20px 100px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -256,5 +287,5 @@ a.select-product-button {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  grid-gap: 90px;
+  grid-gap: 100px;
 }
