worked on single-product template

--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -10,3 +10,5 @@
 @import 'assets/scss/elements/buttons';
 @import 'assets/scss/elements/carbon-blocks';
 @import 'assets/scss/elements/product-previews';
+
+@import 'assets/scss/posts/single-product';
