--- a/assets/scss/common/main.scss
+++ b/assets/scss/common/main.scss
@@ -13,4 +13,12 @@ header {
     box-sizing: border-box;
 }
 
-main { width: 100%;}
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+}
