--- a/assets/scss/common/images.scss
+++ b/assets/scss/common/images.scss
@@ -2,3 +2,13 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.landscape-img {
+    width: 100%;
+    height: auto;
+}
+
+.portrait-img {
+    width: auto;
+    height: 100%;
+}
