--- a/assets/scss/elements/product-previews.scss
+++ b/assets/scss/elements/product-previews.scss
@@ -1,6 +1,6 @@
 .photolab-product-preview {
     @include flex-center-column;
-    width: 390px;
+    width: 350px;
     max-width: 100%;
     grid-gap: 20px;
     box-sizing: border-box;
@@ -8,9 +8,8 @@
     .image-container {
         @include flex-center-center;
         position: relative;
-        width: 100%;
-        height: 275px;
-        overflow-y: hidden;
+        width: 350px;
+        height: 350px;
     }
 
     .info-container {
@@ -19,7 +18,7 @@
     }
 
     .button-container {
-        @include flex-center-column;
+        @include flex-center-center;
         grid-gap: 5px;
         width: 100%;
     }
@@ -28,8 +27,4 @@
         margin-top: 0;
     }
 
-    img {
-        max-width: 100%;
-        max-height: 100%;
-    }
 }
