--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -26,8 +26,6 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -155,6 +153,16 @@ p {
 .background-image {
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.landscape-img {
+  width: 100%;
+  height: auto;
+}
+
+.portrait-img {
+  width: auto;
+  height: 100%;
 }
 
 .flex-center-column {
@@ -410,7 +418,7 @@ a.select-product-button {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  grid-gap: 100px;
+  grid-gap: 90px;
 }
 
 .photolab-product-preview {
@@ -427,7 +435,7 @@ a.select-product-button {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 390px;
+  width: 350px;
   max-width: 100%;
   grid-gap: 20px;
   -webkit-box-sizing: border-box;
@@ -444,9 +452,8 @@ a.select-product-button {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  width: 100%;
-  height: 275px;
-  overflow-y: hidden;
+  width: 350px;
+  height: 350px;
 }
 .photolab-product-preview .info-container {
   display: -webkit-box;
@@ -474,19 +481,11 @@ a.select-product-button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   grid-gap: 5px;
   width: 100%;
 }
 .photolab-product-preview h5, .photolab-product-preview p {
   margin-top: 0;
-}
-.photolab-product-preview img {
-  max-width: 100%;
-  max-height: 100%;
 }
 
 .photolab-single-product {
