added pagination to block-previews

--- a/assets/scss/elements/buttons.scss
+++ b/assets/scss/elements/buttons.scss
@@ -15,7 +15,7 @@ a.select-product-button {
 
 a.hero-button-link {
     color: black;
-    border-color: black;
+    border: 1px solid black;
 }
 
 a.more-info-button {
