--- a/assets/scss/common/mixins.scss
+++ b/assets/scss/common/mixins.scss
@@ -10,6 +10,12 @@
     align-items: center;
 }
 
+@mixin flex-space-between {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+
 @mixin flex-start-column {
     display: flex;
     justify-content: center;
