--- a/static/admin-style.css
+++ b/static/admin-style.css
@@ -106,6 +106,14 @@
           column-gap: 20px;
 }
 
+.grid-gap-10 {
+  grid-gap: 10px;
+}
+
+.grid-gap-20 {
+  grid-gap: 20px;
+}
+
 a.hero-button-link,
 a.more-info-button,
 a.select-product-button {
@@ -124,7 +132,7 @@ a.select-product-button {
 
 a.hero-button-link {
   color: black;
-  border-color: black;
+  border: 1px solid black;
 }
 
 a.more-info-button {
@@ -275,6 +283,22 @@ a.select-product-button {
   max-width: 1200px;
 }
 .carbon-block-previews .products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+.carbon-block-previews .products-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
