--- a/assets/scss/elements/buttons.scss
+++ b/assets/scss/elements/buttons.scss
@@ -1,6 +1,7 @@
 a.hero-button-link,
 a.more-info-button,
-a.select-product-button {
+a.select-product-button,
+.paginate-button {
     max-width: 100%;
     padding: 20px 35px;
     font-family: 'spartan_medium';
@@ -11,11 +12,19 @@ a.select-product-button {
     color: black;
     border-color: black;
     box-sizing: border-box;
+    cursor: pointer;
+    user-select: none;
 }
 
-a.hero-button-link {
+a.hero-button-link,
+.paginate-button {
     color: black;
     border: 1px solid black;
+}
+
+.paginate-button {
+    max-width: 100%;
+    padding: 10px 35px;
 }
 
 a.more-info-button {
