--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -71,6 +71,10 @@ main {
           box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
 }
 
+.hidden {
+  display: none;
+}
+
 .vh-100 {
   height: 100vh;
 }
