--- a/assets/scss/common/colours.scss
+++ b/assets/scss/common/colours.scss
@@ -1,6 +1,9 @@
 $orange-300: #FF8A65;
 $orange-600: #F4511E;
 $orange-900: #BF360C;
+$grey-1: #F6F6F8;
+$grey-2: #E3E3E3;
+
 
 .bg-orange-300 {
     background-color: #FF8A65;
