--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -169,6 +169,115 @@ p {
   height: 100%;
 }
 
+form {
+  max-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+label,
+.lost_password {
+  font-family: "spartan_medium";
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+input[type=text],
+input[type=password],
+input[type=email] {
+  height: 35px;
+  padding: 5px 10px;
+  outline: none;
+  background: transparent;
+  border: none;
+  outline: 1px solid #E3E3E3;
+  font-family: "libre_regular";
+}
+
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus {
+  outline: 1px solid #F4511E;
+}
+
+input[type=checkbox],
+.woocommerce-form__input.woocommerce-form__input-checkbox {
+  width: 35px;
+}
+
+#sign-in-form,
+#sign-up-form {
+  width: 100%;
+  padding: 20px 40px 30px 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+p.form-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+p.form-row input {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.woocommerce-form__label.woocommerce-form__label-for-checkbox.woocommerce-form-login__rememberme {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.woocommerce-form.woocommerce-form-login.login,
+.woocommerce-form.woocommerce-form-register.register {
+  width: 100%;
+  font-size: 13px;
+}
+
+button.woocommerce-form-login__submit,
+button.woocommerce-form-register__submit {
+  width: 100%;
+  height: 35px;
+  font-family: "spartan_medium";
+  letter-spacing: 3px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  background-color: #BF360C;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .flex-center-column {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -289,11 +398,13 @@ a.more-info-button {
   background-color: #F4511E;
 }
 
-a.select-product-button {
+a.select-product-button,
+.woocommerce .woocommerce-form-login .woocommerce-form-login__submit {
   width: 100%;
   padding: 10px 35px;
   color: white;
   background-color: #BF360C;
+  border-radius: none;
 }
 
 .carbon-block-section {
@@ -591,4 +702,120 @@ a.select-product-button {
     grid-column: 1;
     grid-row: 2;
   }
+}
+
+.my-account-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 1300px;
+  max-width: 100%;
+}
+.my-account-container .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.my-account-container .buttons .button {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  max-width: 100%;
+  padding: 20px 10px;
+  font-family: "spartan_medium";
+  letter-spacing: 3px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: white;
+  background-color: #F4511E;
+  border: 1px solid #F4511E;
+}
+.my-account-container .buttons .button-inactive {
+  color: #F4511E;
+  background-color: white;
+  border: 1px solid #F4511E;
+}
+
+.login-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 100%;
+  width: 400px;
+}
+.login-container .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.login-container .buttons .button {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  max-width: 100%;
+  padding: 20px 10px;
+  font-family: "spartan_medium";
+  letter-spacing: 3px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: white;
+  background-color: #F4511E;
+  border: 1px solid #F4511E;
+}
+.login-container .buttons .button-inactive {
+  color: #F4511E;
+  background-color: white;
+  border: 1px solid #F4511E;
 }
