--- a/static/admin-style.css
+++ b/static/admin-style.css
@@ -171,9 +171,9 @@ a.select-product-button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -312,4 +312,63 @@ a.select-product-button,
   -webkit-column-gap: 90px;
      -moz-column-gap: 90px;
           column-gap: 90px;
+}
+
+.carbon-block-advert-single,
+.carbon-block-advert-double {
+  width: 100%;
+  height: 600px;
+}
+
+.carbon-block-advert-single {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.carbon-block-advert-double {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+@media (max-width: 850px) {
+  .carbon-block-advert-double {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: auto;
+  }
+}
+.carbon-block-advert-double .column-1 {
+  width: 100%;
+  height: 100%;
+}
+.carbon-block-advert-double .column-1 img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.carbon-block-advert-double .column-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
