--- a/assets/scss/common/colours.scss
+++ b/assets/scss/common/colours.scss
@@ -3,6 +3,8 @@ $orange-600: #F4511E;
 $orange-900: #BF360C;
 $grey-1: #F6F6F8;
 $grey-2: #E3E3E3;
+$grey-3: #999393;
+$white: #FFFFFF;
 
 
 .bg-orange-300 {
