--- a/assets/scss/common/main.scss
+++ b/assets/scss/common/main.scss
@@ -5,13 +5,9 @@ body {
     font-family: 'libre_regular';
     font-size: 16px;
     line-height: 27px;
+    background-color: $grey-1;
 }
 
-header {
-    width: 100%;
-    height: 60px;
-    box-sizing: border-box;
-}
 
 main {
     width: 100%;
@@ -19,4 +15,5 @@ main {
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    background-color: $grey-1;
 }
