--- a/assets/scss/common/mixins.scss
+++ b/assets/scss/common/mixins.scss
@@ -18,8 +18,15 @@
 
 @mixin flex-start-column {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+@mixin flex-start-start-column {
+    display: flex;
+    justify-content: flex-start;
+    align-items:flex-start;
     flex-direction: column;
 }
 
