--- a/static/frontend-style.css
+++ b/static/frontend-style.css
@@ -1,35 +1,3 @@
-body {
-  width: 100%;
-  margin: 0px;
-  color: black;
-  font-family: "libre_regular";
-  font-size: 16px;
-  line-height: 27px;
-}
-
-header {
-  width: 100%;
-  height: 60px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-main {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 .bg-orange-300 {
   background-color: #FF8A65;
 }
@@ -66,6 +34,130 @@ main {
   background-color: #E3E3E3;
 }
 
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 240px;
+  height: 100vh;
+  padding-top: 50px;
+  background-color: #FFFFFF;
+  color: #999393;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+header a {
+  text-decoration: none;
+  color: inherit;
+}
+header a:hover {
+  color: black;
+}
+header h1 {
+  margin-bottom: 30px;
+  margin-top: 0px;
+}
+header .mobile-menu {
+  display: none;
+}
+@media (max-width: 1000px) {
+  header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100vw;
+    height: 100px;
+    padding-top: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    align-items: center;
+  }
+  header .mobile-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 40px;
+       -moz-column-gap: 40px;
+            column-gap: 40px;
+  }
+  header .mobile-menu .hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border: 2px solid black;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    color: black;
+  }
+  header h1 {
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+}
+
+body {
+  width: 100%;
+  margin: 0px;
+  color: black;
+  font-family: "libre_regular";
+  font-size: 16px;
+  line-height: 27px;
+  background-color: #F6F6F8;
+}
+
+main {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #F6F6F8;
+}
+
 .box-shadow {
   -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
           box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
@@ -100,6 +192,21 @@ main {
 @font-face {
   font-family: "libre_regular";
   src: url("../assets/fonts/LibreBaskerville-Regular.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "montserrat_bold";
+  src: url("../assets/fonts/Montserrat-Bold.ttf");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "montserrat_medium";
+  src: url("../assets/fonts/Montserrat-Medium.ttf");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "montserrat_regular";
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
   font-weight: 400;
 }
 h1, h2, h3, h4, h5 {
@@ -219,12 +326,12 @@ p.form-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -655,12 +762,12 @@ a.select-product-button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -682,85 +789,6 @@ a.select-product-button,
 }
 .photolab-product-preview h5, .photolab-product-preview p {
   margin-top: 0;
-}
-
-.photolab-single-product {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: start;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  width: 1300px;
-  max-width: 100%;
-  height: 80vh;
-  -webkit-column-gap: 70px;
-     -moz-column-gap: 70px;
-          column-gap: 70px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 70px 70px 70px 70px;
-  -webkit-box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
-          box-shadow: rgba(0, 0, 0, .15) 0px 2px 8px;
-}
-@media (max-width: 950px) {
-  .photolab-single-product {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    padding: 35px 35px 35px 35px;
-    -webkit-column-gap: 35px;
-       -moz-column-gap: 35px;
-            column-gap: 35px;
-  }
-}
-.photolab-single-product .single-product-images {
-  grid-column: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-}
-.photolab-single-product .single-product-images img {
-  width: 100%;
-  height: auto;
-}
-@media (max-width: 950px) {
-  .photolab-single-product .single-product-images {
-    grid-column: 1;
-    grid-row: 1;
-  }
-}
-.photolab-single-product .single-product-info {
-  grid-column: 2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-}
-@media (max-width: 950px) {
-  .photolab-single-product .single-product-info {
-    grid-column: 1;
-    grid-row: 2;
-  }
 }
 
 .my-account-container {
@@ -877,4 +905,149 @@ a.select-product-button,
   color: #F4511E;
   background-color: white;
   border: 1px solid #F4511E;
+}
+
+footer {
+  width: 100%;
+  height: 400px;
+  background-color: #BF360C;
+}
+
+nav.main-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  grid-gap: 50px;
+  color: #999393;
+  background-color: #FFFFFF;
+}
+nav.main-menu h1 {
+  display: none;
+}
+nav.main-menu .hamburger-close {
+  display: none;
+}
+@media (max-width: 1000px) {
+  nav.main-menu {
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100vh;
+  }
+  nav.main-menu h1 {
+    display: block;
+    color: black;
+  }
+  nav.main-menu .hamburger-close {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    top: 28px;
+    right: 30px;
+    border: 2px solid black;
+    width: 40px;
+    height: 40px;
+    color: black;
+    cursor: pointer;
+  }
+}
+nav.main-menu a {
+  text-decoration: none;
+  color: inherit;
+}
+nav.main-menu a:hover {
+  color: black;
+}
+nav.main-menu ul {
+  border-top: thin solid #999393;
+  border-bottom: thin solid #999393;
+  font-family: "montserrat_bold";
+  list-style: none;
+  padding-left: 0px;
+  letter-spacing: 2px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 180px;
+}
+@media (max-width: 1000px) {
+  nav.main-menu ul {
+    width: 300px;
+    max-width: 100%;
+  }
+}
+nav.main-menu ul ul {
+  padding-left: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  border-top: none;
+  border-bottom: none;
+}
+nav.main-menu ul .hidden {
+  display: none;
+}
+nav.main-menu li {
+  cursor: pointer;
+}
+nav.main-menu li.parent,
+nav.main-menu li.parent-expander {
+  font-size: 15px;
+  text-transform: uppercase;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+nav.main-menu li.parent-expander {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+nav.main-menu li.parent-expander i {
+  padding-left: 30px;
+}
+nav.main-menu li.parent-expander:hover {
+  color: black;
+}
+nav.main-menu li.child {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+nav.main-menu .nav-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 70px;
+     -moz-column-gap: 70px;
+          column-gap: 70px;
 }
